continue adding the visibility humidty and other fields to the table

--- a/weather.html
+++ b/weather.html
@@ -21,7 +21,7 @@
 							<thead>
 								<tr>
 									<th>Datum</th>
-									<th>Temperatur</th>
+									<th>Temperatur(C)</th>
 									<th>Regen (mm/m&sup2;)</th>
 									<th>Luftfeuchte</th>
 									<th>Luftdruck (hPa)</th>
