adding design to the table

--- a/weather.html
+++ b/weather.html
@@ -21,10 +21,10 @@
 							<thead>
 								<tr>
 									<th>Datum</th>
-									<th>Temperatur(C)</th>
-									<th>Regen (mm/m&sup2;)</th>
+									<th>Temperatur</th>
+									<th>Regen</th>
 									<th>Luftfeuchte</th>
-									<th>Luftdruck (hPa)</th>
+									<th>Luftdruck</th>
 									<th>Sicht (m)</th>
 								</tr>
 							</thead>
