keep updating the css to be compatible for all roecast days

--- a/weather.html
+++ b/weather.html
@@ -48,9 +48,12 @@
 		
 		<template class="weather-details">
 			<section class="weather-details">
-
+				<div class="main">
+					<h1>Wettervorhersage für <output class="date"/></h1>
+				</div>
 			</section>
 		</template>
+		
 		<template class="weather-details">
 			<section class="weather-details">
 
