create svg table for temeprature graphics

--- a/weather.html
+++ b/weather.html
@@ -50,6 +50,19 @@
 			<section class="weather-details">
 				<div class="main">
 					<h1>Wettervorhersage für <output class="date"/></h1>
+					<div>
+						<span class="temp">
+							<label>Temperatur (c)</label>
+							<svg height="120" width="320">
+								<line x1="10" x2="10" y1="10" y2="110" />
+								<line x1="10" x2="310" y1="110" y2="110" />
+
+								
+							</svg>
+						</span>
+						<span>
+						</span>
+					</div>
 				</div>
 			</section>
 		</template>
