--- a/weather.html
+++ b/weather.html
@@ -53,11 +53,13 @@
 					<div>
 						<span class="temp">
 							<label>Temperatur (c)</label>
-							<svg height="120" width="320">
-								<line x1="10" x2="10" y1="10" y2="110" />
-								<line x1="10" x2="310" y1="110" y2="110" />
-
-								
+							<svg height="140" width="340">
+								<line class="coord" x1="20" x2="20" y1="20" y2="120" />
+								<line  class="coord" x1="20" x2="25" y1="20" y2="25" />
+								<line  class="coord" x1="20" x2="15" y1="20" y2="25" />
+								<line  class="coord" x1="20" x2="320" y1="120" y2="120" />
+								<line  class="coord" x1="320" x2="315" y1="120" y2="115" />
+								<line  class="coord" x1="320" x2="315" y1="120" y2="125" />
 							</svg>
 						</span>
 						<span>
