add line and polygons in svg.js file

--- a/weather.html
+++ b/weather.html
@@ -63,6 +63,15 @@
 							</svg>
 						</span>
 						<span>
+						<label>Temperatur (c)</label>
+							<svg height="140" width="340">
+								<line class="coord" x1="20" x2="20" y1="20" y2="120" />
+								<line  class="coord" x1="20" x2="25" y1="20" y2="25" />
+								<line  class="coord" x1="20" x2="15" y1="20" y2="25" />
+								<line  class="coord" x1="20" x2="320" y1="120" y2="120" />
+								<line  class="coord" x1="320" x2="315" y1="120" y2="115" />
+								<line  class="coord" x1="320" x2="315" y1="120" y2="125" />
+							</svg>
 						</span>
 					</div>
 				</div>
